SFDC Automation/src/objects/RSM_YearMakeModelLookup__c.object
<CustomObject>
    <description>Object to store the Year-Make-Model lookup fro different types of Vehicle.</description>
    <fields>
        <fullName>Engine_Manufacturer_Description__c</fullName>
        <label>Engine Manufacturer Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturer_ID__c</fullName>
        <label>Engine Manufacturer ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Model_Description__c</fullName>
        <label>Engine Model Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Part_Number__c</fullName>
        <label>Kit Part Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Description__c</fullName>
        <label>Manufacturer Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_make_Model__c</fullName>
        <label>Year make Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RSM YearMakeModelLookup</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>RSM_YearMakeModelLookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSM YearMakeModelLookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>